Emp now has modal view working

--- a/DirectoryExample/DirectoryExample.csproj
+++ b/DirectoryExample/DirectoryExample.csproj
@@ -312,6 +312,7 @@
     <Content Include="Views\Shared\_CustomerPartial.cshtml" />
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
+    <Content Include="Views\Shared\_EmployeePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
